--- a/src/index.css
+++ b/src/index.css
@@ -339,3 +339,22 @@ th{
 margin-right: 0% !important;
 padding-right: 0% !important;
   }
+
+  .css-1agvk75 {
+    min-height: 80px !important;
+    max-height:120px !important;
+    background-color: #f1fff0 !important;
+    border: 1px dashed #009247 !important;
+    border-radius: 8px !important;
+    padding:0 !important;
+    margin: 0px !important;
+}
+.css-17pbpn5-MuiTypography-root{
+  font-weight: 400 !important;
+  margin: 5px !important;
+  font-size: 13px !important;
+}
+.css-f682gy-MuiSvgIcon-root{
+width: 30px !important;
+margin: 5px !important;
+}
