--- a/src/index.css
+++ b/src/index.css
@@ -342,7 +342,7 @@ padding-right: 0% !important;
 
   .css-1agvk75 {
     min-height: 80px !important;
-    max-height:120px !important;
+    max-height:180px !important;
     background-color: #f1fff0 !important;
     border: 1px dashed #009247 !important;
     border-radius: 8px !important;
@@ -357,4 +357,26 @@ padding-right: 0% !important;
 .css-f682gy-MuiSvgIcon-root{
 width: 30px !important;
 margin: 5px !important;
+}
+.input-group-text{
+  background-color: transparent !important;
+
+}
+.inputForm{
+  border-left: none !important;
+}
+.inputRight{
+  border-right: none !important;
+}
+.eyeIcon{
+color: #8391A1 !important ;
+}
+.page-link{
+  color: #009247 !important;
+}
+.delete-title{
+  color: #bebebe !important;
+}
+.css-16d95v9 >.ps-menu-button.active {
+  border-left: 5px solid #009247 !important;
 }
